Correct path of Keyword 3D Tag Cloud.

--- a/public/html/cloudTag.html
+++ b/public/html/cloudTag.html
@@ -58,115 +58,115 @@
                         {
                             label: 'Archaea',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/genomes?microbe=archaea',
+                            url: 'https://microbial.deepomics.org/database/genomes?microbe=archaea',
                             class: 'dataset-link',
                         },
                         {
                             label: 'Bacteria',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/genomes?microbe=bacteria',
+                            url: 'https://microbial.deepomics.org/database/genomes?microbe=bacteria',
                             class: 'dataset-link',
                         },
                         {
                             label: 'Fungi',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/genomes?microbe=fungi',
+                            url: 'https://microbial.deepomics.org/database/genomes?microbe=fungi',
                             class: 'dataset-link',
                         },
                         {
                             label: 'Viruses',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/genomes?microbe=viruses',
+                            url: 'https://microbial.deepomics.org/database/genomes?microbe=viruses',
                             class: 'dataset-link',
                         },
                         {
                             label: 'Protein',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/proteins',
+                            url: 'https://microbial.deepomics.org/database/proteins',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'tRNA & tmRNA',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/tRNAs',
+                            url: 'https://microbial.deepomics.org/database/tRNAs',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'CRISPR/Cas System',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/CRISPRCasSystems',
+                            url: 'https://microbial.deepomics.org/database/CRISPRCasSystems',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'Anti-CRISPR Protein',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/antiCRISPRProteins',
+                            url: 'https://microbial.deepomics.org/database/antiCRISPRProteins',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'Secondary Metabolite ',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/secondaryMetabolites',
+                            url: 'https://microbial.deepomics.org/database/secondaryMetabolites',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'Signal Peptides',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/signalPeptides',
+                            url: 'https://microbial.deepomics.org/database/signalPeptides',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'Virulent Factor',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/virulenceFactors',
+                            url: 'https://microbial.deepomics.org/database/virulenceFactors',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'Antibiotic Resistance Gene',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/antibioticResistanceGenes',
+                            url: 'https://microbial.deepomics.org/database/antibioticResistanceGenes',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'Transmembrane Protein',
                             target: '_blank',
-                            url: 'http://localhost:3000/database/transmembraneHelices',
+                            url: 'https://microbial.deepomics.org/database/transmembraneHelices',
                             class: 'plasmid-link',
                         },
                         {
                             label: 'ORF prediction & Protein classification',
                             target: '_blank',
-                            url: 'http://localhost:3000/analysis?module=orf',
+                            url: 'https://microbial.deepomics.org/analysis?module=orf',
                             class: 'host-link'
                         },
                         {
                             label: 'tRNA & tmRNA prediction',
                             target: '_blank',
-                            url: 'http://localhost:3000/analysis?module=trna',
+                            url: 'https://microbial.deepomics.org/analysis?module=trna',
                             class: 'host-link'
                         },
                         {
                             label: 'Virulent Factor & Antibiotic Resistance Gene Detection',
                             target: '_blank',
-                            url: 'http://localhost:3000/analysis?module=vf',
+                            url: 'https://microbial.deepomics.org/analysis?module=vf',
                             class: 'host-link'
                         },
                         {
                             label: 'Transmembrane Protein Annotation',
                             target: '_blank',
-                            url: 'http://localhost:3000/analysis?module=transmembrane',
+                            url: 'https://microbial.deepomics.org/analysis?module=transmembrane',
                             class: 'host-link'
                         },
                         {
                             label: 'Sequence Alignment',
                             target: '_blank',
-                            url: 'http://localhost:3000/analysis?module=alignment',
+                            url: 'https://microbial.deepomics.org/analysis?module=alignment',
                             class: 'host-link'
                         },
                         {
                             label: 'Comparative Analysis',
                             target: '_blank',
-                            url: 'http://localhost:3000/analysis?module=comparative',
+                            url: 'https://microbial.deepomics.org/analysis?module=comparative',
                             class: 'host-link'
                         }
                     ],
