--- a/public/html/cloudTag.html
+++ b/public/html/cloudTag.html
@@ -98,7 +98,7 @@
                             class: 'plasmid-link',
                         },
                         {
-                            label: 'Anti-CRISPR Protein',
+                            label: 'Anti-CRISPR Element',
                             target: '_blank',
                             url: 'https://microbial.deepomics.org/database/antiCRISPRProteins',
                             class: 'plasmid-link',
