--- a/public/html/cloudTag.html
+++ b/public/html/cloudTag.html
@@ -104,7 +104,7 @@
                             class: 'plasmid-link',
                         },
                         {
-                            label: 'Secondary Metabolite ',
+                            label: 'Secondary Metabolite Biosynthetic Cluster',
                             target: '_blank',
                             url: 'https://microbial.deepomics.org/database/secondaryMetabolites',
                             class: 'plasmid-link',
